kubernetes/kubernetes-objects.yaml
apiVersion: v1
kind: Service
metadata:
  name: lara-site
spec:
  type: LoadBalancer
  selector:
    app: lara-site
  ports:
  - port: 8081
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lara-site
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lara-site
  template:
    metadata:
      labels:
        app: lara-site
    spec:
      containers:
      - name: lara-site
        image: alaninformatica/lara-site:v1
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.2"
          limits:
            memory: "256Mi"
            cpu: "0.5"
        ports:
        - containerPort: 80
