kubernetes/service-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: lara-site
  namespace: "${NAMESPACE}"
spec:
  type: ClusterIP
  selector:
    app: lara-site
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lara-site
  namespace: "${NAMESPACE}"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lara-site
  template:
    metadata:
      labels:
        app: lara-site
    spec:
      containers:
      - name: lara-site
        image: alaninformatica/lara-site:v1
        resources:
          limits:
            memory: "256Mi"
            cpu: "100m"
          requests:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
