kubernetes/dev-httproutes.yaml
# Development routes
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: site-route
  namespace: lara-development
spec:
  parentRefs:
  - name: lara-dev-gateway
    sectionName: https
  hostnames:
  - "site.lara-dev.bonfimalan.com.br"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: lara-site
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloud-http-redirect-route
  namespace: lara-development
spec:
  parentRefs:
  - name: lara-dev-gateway
    sectionName: http
  hostnames:
  - "site.lara-dev.bonfimalan.com.br"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
